--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_animate: ^4.5.0
   google_fonts: ^4.0.4
   freezed: ^2.4.2
+  timelines: ^0.1.0
   freezed_annotation: ^2.4.1
   shimmer: ^3.0.0
   json_annotation: ^4.8.1
