--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.2.1
   firebase_core: ^2.27.0 
   cloud_firestore: ^4.15.8
+  firebase_storage: ^11.6.9
 
 
 dev_dependencies: 
