--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_core: ^2.27.0 
   cloud_firestore: ^4.15.8
   firebase_storage: ^11.6.9
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies: 
