--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_storage: ^11.6.9
   cached_network_image: ^3.3.1
+  webview_flutter: ^4.4.2
+  flutter_inappwebview: ^5.8.0
+  gap: ^3.0.1
+  http: ^0.13.6
 
 
 dev_dependencies: 
