--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.8
   sign_in_button: ^3.2.0
+  get_storage: ^2.1.1
 
 
 dev_dependencies: 
